Updated View Funciones Disponibles

--- a/Cinedefe.Core/Cinedefe.Core.csproj
+++ b/Cinedefe.Core/Cinedefe.Core.csproj
@@ -37,8 +37,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Ciudad.cs" />
+    <Compile Include="Model\FuncionDisponible.cs" />
     <Compile Include="Model\Pelicula.cs" />
-    <Compile Include="Model\PeliculaGroups.cs" />
     <Compile Include="Model\Sucursal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CarteleraRepository.cs" />
